--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
+<!DOCTYPE html>
+<canvas id="canvas" width="800" height="600"></canvas>
 <script src="sdk.min.js"></script>
 <script src="candycrushsaga.js"></script>
