Get a lot of errors fixed, need API url

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
 <canvas id="canvas" width="800" height="600"></canvas>
-<script src="sdk.min.js" type="module"></script>
+<script src="sdk.min.js"></script>
+<script src="./app.min.js"></script>
+<script src="./fictionFactory.js"></script>
+<script>
+    loadFictionFactory();
+</script>
 <script src="candycrushsaga.js"></script>
